ubuntu-image (1.1+17.10ubuntu1) UNRELEASED; urgency=medium

  * Fix snapcraft.yaml for classic snappage.  (LP: #1673576)
  * Add a new step in the builder that generates .manifest files listing all
    snaps installed in the resulting image.  (LP: #1680574)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Fri, 21 Apr 2017 19:35:00 +0200

ubuntu-image (1.0+17.04ubuntu1) zesty; urgency=medium

  * Exit with a console message instead of crashing when the contents of a
    partition does not fit within the specified size.  (LP: #1666580)
  * Don't install an unusable global flake8 extension.  (LP: #1631156)
  * Fix the autopkgtests to use --output-dir instead of the obsolete
    --output command line switch.  (LP: #1667140)
  * Added ``--image-file-list`` command line argument to record the paths
    of all the disk image files written.
  * Added an autopkgtest to prove that generated images can be
    successfully booted (on amd64 only).  (LP: #1625732)
  * Add an autopkgtest for ensuring each PR has a changelog entry and a bug
    linked to it.  (LP: #1655671)
  * Make ubuntu-image a classic confinement snap.  (LP: #1638645)

 -- Barry Warsaw <barry@ubuntu.com>  Wed, 22 Feb 2017 11:30:01 -0500

ubuntu-image (0.15+17.04ubuntu1) zesty; urgency=medium

  * ubuntu-image now supports gadget.yaml files with multiple volume
    specifications.  Each volume describes a different disk image.  For
    the multi-volume case, no implicit root file system structure is added
    at all; the root file system partition must be defined in the
    gadget.yaml.  -o/--output is ignored in the multi-volume case.
    (LP: #1641727)
  * Add -O/--output-dir command line options.  Disk image files are
    written here using the volume name and a .img suffix.  Deprecate
    -o/--output.  -O and -o are mutually exclusive.
  * Handle structure parts with size or offset < 1MiB.  (LP: #1630709)
  * Warn when the size or offset is not a multiple of the sector size.